// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should render with the correct props 1`] = `
<RippledComponent
  className="button"
  disabled={false}
  initRipple={[Function]}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchStart={[Function]}
  style={Object {}}
  type="button"
  unbounded={false}
>
  button
</RippledComponent>
`;

exports[`Button should render with the correct props 2`] = `
<RippledComponent
  className="button mockClass"
  disabled={false}
  initRipple={[Function]}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchStart={[Function]}
  style={Object {}}
  type="button"
  unbounded={false}
>
  mock child
</RippledComponent>
`;

exports[`Button should render with the correct props 3`] = `
<RippledComponent
  className="button mockClass"
  disabled={false}
  initRipple={[Function]}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchStart={[Function]}
  style={Object {}}
  type="submit"
  unbounded={false}
>
  submit
</RippledComponent>
`;
